# vision-ground-truth

./: CMakeLists.txt  package.xml
data/: control_system.dia  controls_disturbance.csv  controls_obstacle.csv  controls_standalone.csv  errors_disturbance.csv  errors_obstacle.csv  errors_standalone.csv  positions_disturbance.csv  positions_obstacle.csv  positions_standalone.csv  references_disturbance.csv  references_obstacle.csv  references_standalone.csv  setpoint_demo.wlmp  setpoint_with_disturbance_demo.wlmp  setpoint_with_weights_demo.wlmp  soft_test.ogv  soft_test_with_disturbance.ogv
src/: soft_robot_tracker.cpp
src/soft_robot_project/: arduino_valve.py  arduino_valve_driver.py  logger.py  soft_robot_controller.py
srv/: ComputeGradient.srv
